--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
              <div class="jumbotron">
           <h2><span class="text-warning"></span>Meow <span class="text-success">Cafe <img src="http://vignette1.wikia.nocookie.net/pokemon/images/b/b8/052Meowth_BW_anime.png/revision/latest?cb=20150101230316" height="42" width="42"> </span></h2>
           
-          <span class="pull-right text-muted">Inventory for Employees and Administration</span>
-          <div class="text-muted">F-11, Islamabad</div>
+          <div class="text-muted">Multiple Locations in Islamabad</div>
         </div>
         </nav>
       </div>
